# next-rust-template

./: .env.local  Cargo.toml  docker-compose.yaml  rustfmt.toml
backend/: .env  .env.local  Cargo.toml  Dockerfile  rustfmt.toml
backend/config/: base.yaml
backend/src/: configuration.rs  lib.rs  main.rs  telemetry.rs
backend/src/domain/entities/: user.rs
backend/src/domain/value_objects/: email.rs  user_id.rs
backend/src/infrastructure/: applicaiton.rs  application.rs  mod.rs  telemetry.rs
backend/src/infrastructure/configuration/: application_settings.rs  database_settings.rs  mod.rs  redis_settings.rs
backend/src/infrastructure/databases/: postgres.rs  redis.rs
backend/src/infrastructure/middlewares/: authentication.rs  compression.rs  cors.rs  logging.rs  mcors.rs  mod.rs
backend/src/presentation/: error.rs  mod.rs  response.rs  routes.rs
backend/src/presentation/v1/: health.rs  mod.rs
backend/src/presentation/v1/auth_handlers/: get_session.rs  mod.rs
backend/src/presentation/v1/handlers/: health.rs
config/: base.yaml  local.yaml
frontend/: next.config.ts  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/signin/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(protected)/: layout.tsx  page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/features/session/signin/: contracts.ts  index.ts  types.ts  ui.tsx
frontend/src/features/session/signup/: contracts.ts  types.ts  ui.tsx
frontend/src/shared/lib/: api-client.ts  auth-client.ts  auth.ts  db.ts
frontend/src/widgets/: api_test.tsx
migrations/: 20251021031652_user.sql
scripts/: init_db.sh  init_pgadmin.sh  init_redis.sh  migrate.sh
src/: configuration.rs
tests/api/: helpers.rs
