[package]
name = "template"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "template"

[dependencies]
# actix-web = { version = "4.9.0" }
# actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
# actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

config = { version = "0.15.14" }
uuid = { version = "1.18.0", features = ["v4", "serde"] }

# Parsing
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.143"

# Time
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }

# Security
secrecy = { version = "0.10.3", features = ["serde"] }
validator = "0.20.0"
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std"] }
rand = { version = "0.9.2", features = ["std_rng"] }
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.9"
hex = "0.4.3"

# Errors
thiserror = "2.0.16"
anyhow = "1.0.99"

# Tracing
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.19"

[dependencies.sqlx]
version = "0.8.6"
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]


[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt", "macros"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.143"
linkify = "0.10.0"
wiremock = "0.6.5"
claims = "0.8.0"
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
