[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = { version = "4.11.0" }
actix-cors = "0.7.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Parsing
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.145"

# Time
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }

# Security
secrecy = { version = "0.10.3", features = ["serde"] }
validator = "0.20.0"
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std"] }
rand = { version = "0.9.2", features = ["std_rng"] }
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.9"
hex = "0.4.3"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }

# Errors
thiserror = "2.0.17"
anyhow = "1.0.100"

# Tracing
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.19"

# Environment
dotenv = "0.15.0"
config = { version = "0.15.18" }

# Databae
redis = "0.32.7"
[dependencies.sqlx]
version = "0.8.6"
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.reqwest]
version = "0.12.24"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "macros"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.145"
linkify = "0.10.0"
wiremock = "0.6.5"
claims = "0.8.0"
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
